--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-  <h1>Welcome to Cole's Math Blog</h1>
-
+  <h1>Cole Chapman</h1>
+  <hr>
   <p>This is my blog for my mathematical musings and things I find interesting. I am a mathematics major at Arizona State University.</p>
 
   <h2>Links:</h2>
