--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>Cole's Math Blog</title>
 </head>
+  
+  <BODY BGCOLOR="#D1C6D6" TEXT="#000000" LINK = "#0303E5"
+ VLINK = "#0303E5" ALINK = "#0303E5">
+  
 <body>
 
   <h1>Cole Chapman</h1>
