--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Cole's Math Blog</title>
 </head>
   
-  <BODY BGCOLOR="#D1C6D6" TEXT="#000000" LINK = "#0303E5"
+  <BODY BGCOLOR="#ADD8E6" TEXT="#000000" LINK = "#0303E5"
  VLINK = "#0303E5" ALINK = "#0303E5">
   
 <body>
