--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <h1>Cole Chapman</h1>
   <hr>
-  <p>This is my blog for my mathematical musings and things I find interesting. I am a mathematics major at Arizona State University.</p>
+  <p>Welcome to my "blog". I am using this website to collect things I find interesting; links to important reference materials, websites and more.. I am currently an undergraduate student at Arizona State University.</p>
 
   <h2>Links:</h2>
   <ul>
