--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
   <h2>Links:</h2>
   <ul>
-    <li><a href="cv.html">CV</a></li>
-    <li><a href="research_statement.html">Research Statement</a></li>
+    <li><a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a></li>
+    <li><a href="https://www.ams.org/notices/200706/tx070600718p.pdf/">Galois Representation</a></li>
+    
   </ul>
 
 </body>
