--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2>Links:</h2>
   <ul>
     <li><a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a></li>
-    <li><a href="https://www.ams.org/notices/200706/tx070600718p.pdf/">Galois Representation</a></li>
+    <li><a href="https://www.dropbox.com/s/5sy7cw01tswzu5b/tx070600718p.pdf?dl=0">Galois Representation</a></li>
     
   </ul>
 
