--- a/index.html
+++ b/index.html
@@ -7,12 +7,56 @@
       position: absolute;
       top: 10px;
       right: 10px;
+      width: 60px;
+      height: 34px;
+      background: #ccc;
+      border-radius: 34px;
+      padding: 5px;
+    }
+
+    #funButton input {
+      display: none;
+    }
+
+    #funSlider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    #funSlider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    #funButton input:checked + #funSlider {
+      background-color: #2196F3;
+    }
+
+    #funButton input:checked + #funSlider:before {
+      transform: translateX(26px);
     }
   </style>
 </head>
   
 <body bgcolor="#ADD8E6" text="#000000" link="#0303E5" vlink="#0303E5" alink="#0303E5">
-  <button id="funButton">Fun</button>
+  <label id="funButton">
+    <input type="checkbox">
+    <span id="funSlider"></span>
+  </label>
   <h1>Cole Chapman</h1>
   <hr>
   <p>Welcome to my "blog". I am using this website to collect things I find interesting; links to important reference materials, websites and more.. I am currently an undergraduate student at Arizona State University.</p>
@@ -25,13 +69,47 @@
   </ul>
 
   <script>
-    document.getElementById('funButton').addEventListener('click', function() {
-      document.body.style.fontFamily = 'Comic Sans MS';
-      document.body.style.color = 'magenta';
-      document.body.style.backgroundColor = 'yellow';
+    function randomColor() {
+      var colors = ['magenta', 'blue', 'red', 'green'];
+      return colors[Math.floor(Math.random() * colors.length)];
+    }
+
+    function colorizeText(node) {
+      var text = node.nodeValue;
+      var coloredText = '';
+      for (var i = 0; i < text.length; i++) {
+        coloredText += '<span style="color: ' + randomColor() + '">' + text[i] + '</span>';
+      }
+      var div = document.createElement('div');
+      div.innerHTML = coloredText;
+      while (div.firstChild) {
+        node.parentNode.insertBefore(div.firstChild, node);
+      }
+      node.parentNode.removeChild(node);
+    }
+
+    function walk(node, func) {
+      func(node);
+      node = node.firstChild;
+      while (node) {
+        walk(node, func);
+        node = node.nextSibling;
+      }
+    }
+
+    document.querySelector('#funButton input').addEventListener('change', function() {
+      if (this.checked) {
+        document.body.style.fontFamily = 'Comic Sans MS';
+        document.body.style.backgroundColor = 'yellow';
+        walk(document.body, function(node) {
+          if (node.nodeType == 3) {
+            colorizeText(node);
+          }
+        });
+      } else {
+        location.reload();
+      }
     });
   </script>
 </body>
 </html>
-
-
