--- a/index.html
+++ b/index.html
@@ -3,60 +3,20 @@
 <head>
   <title>Cole's Math Blog</title>
   <style>
-    #funButton {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 60px;
-      height: 34px;
-      background: #ccc;
-      border-radius: 34px;
-      padding: 5px;
-    }
-
-    #funButton input {
+    .hidden {
       display: none;
-    }
-
-    #funSlider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #ccc;
-      transition: .4s;
-      border-radius: 34px;
-    }
-
-    #funSlider:before {
-      position: absolute;
-      content: "";
-      height: 26px;
-      width: 26px;
-      left: 4px;
-      bottom: 4px;
-      background-color: white;
-      transition: .4s;
-      border-radius: 50%;
-    }
-
-    #funButton input:checked + #funSlider {
-      background-color: #2196F3;
-    }
-
-    #funButton input:checked + #funSlider:before {
-      transform: translateX(26px);
     }
   </style>
 </head>
   
 <body bgcolor="#ADD8E6" text="#000000" link="#0303E5" vlink="#0303E5" alink="#0303E5">
-  <label id="funButton">
-    <input type="checkbox">
-    <span id="funSlider"></span>
-  </label>
+  <div style="display: flex; justify-content: right; position: absolute; right: 0px;">
+    Fun mode&nbsp
+    <button style="background-color: #0000; padding: 0px; border-style: none; cursor: pointer;" onclick="toggleFunMode();">
+      <img id="toggle-on" style="max-height: 20px;" src="/toggle-on.png" />
+      <img class="hidden" id="toggle-off" style="max-height: 20px;" src="/toggle-off.png" />
+    </button>
+  </div>
   <h1>Cole Chapman</h1>
   <hr>
   <p>Welcome to my "blog". I am using this website to collect things I find interesting; links to important reference materials, websites and more.. I am currently an undergraduate student at Arizona State University.</p>
@@ -97,19 +57,24 @@
       }
     }
 
-    document.querySelector('#funButton input').addEventListener('change', function() {
-      if (this.checked) {
-        document.body.style.fontFamily = 'Comic Sans MS';
-        document.body.style.backgroundColor = 'yellow';
-        walk(document.body, function(node) {
+    function toggleFunMode() {
+      var body = document.body;
+      var toggleOn = document.getElementById('toggle-on');
+      var toggleOff = document.getElementById('toggle-off');
+      if (body.style.fontFamily !== 'Comic Sans MS') {
+        body.style.fontFamily = 'Comic Sans MS';
+        body.style.backgroundColor = 'yellow';
+        walk(body, function(node) {
           if (node.nodeType == 3) {
             colorizeText(node);
           }
         });
+        toggleOn.classList.add('hidden');
+        toggleOff.classList.remove('hidden');
       } else {
         location.reload();
       }
-    });
+    }
   </script>
 </body>
 </html>
