--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div style="display: flex; justify-content: right; position: absolute; right: 0px;">
     Fun mode&nbsp
     <button style="background-color: #0000; padding: 0px; border-style: none; cursor: pointer;" onclick="toggleFunMode();">
-      <img class="hidden" id="toggle-on" style="max-height: 20px;" src="/toggle-on.png" />
-      <img id="toggle-off" style="max-height: 20px;" src="/toggle-off.png" />
+      <img id="toggle-on" style="max-height: 20px;" src="/toggle-on.png" />
+      <img class="hidden" id="toggle-off" style="max-height: 20px;" src="/toggle-off.png" />
     </button>
   </div>
   <h1>Cole Chapman</h1>
