--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       var body = document.body;
       var toggleOn = document.getElementById('toggle-on');
       var toggleOff = document.getElementById('toggle-off');
-      if (body.style.fontFamily !== '') {
+      if (body.style.fontFamily === 'Comic Sans MS') {
         body.style.fontFamily = '';
         body.style.backgroundColor = '';
         body.innerHTML = originalBodyHTML;
