--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 </head>
   
 <body onload="toggleFunMode()">
-  <div style="display: flex; justify-content: right; position: absolute; right: 0px;">
-    Fun mode&nbsp
-    <button style="background-color: #0000; padding: 0px; border-style: none; cursor: pointer;" onclick="toggleFunMode();">
-      <img id="toggle-on" style="max-height: 20px;" src="/toggle-on.png" />
-      <img class="hidden" id="toggle-off" style="max-height: 20px;" src="/toggle-off.png" />
-    </button>
-  </div>
+  <div style="display: flex; justify-content: right; position: absolute; right :0px;">
+          Fun mode&nbsp
+          <button style="background-color: #0000; padding: 0px; border-style: none; cursor: pointer;" onclick="document.body.classList.toggle('serious'); document.getElementById('toggle-on').classList.toggle('hidden'); document.getElementById('toggle-off').classList.toggle('hidden'); " ><img id="toggle-on" style="max-height: 20px;" src="/toggle-on.png" /><img class="hidden" id="toggle-off" style="max-height: 20px;" src="/toggle-off.png" /></button>
+        </div>
   <h1>Cole Chapman</h1>
   <hr>
   <p>Welcome to my "blog". I am using this website to collect things I find interesting; links to important reference materials, websites and more.. I am currently an undergraduate student at Arizona State University.</p>
