--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     }
     .normalMode {
       font-family: Arial, sans-serif;
-      background-color: '#ADD8E6';
+      background-color: light blue;
     }
   </style>
 </head>
