--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <li><a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a></li>
     <li><a href="https://www.dropbox.com/s/5sy7cw01tswzu5b/tx070600718p.pdf?dl=0">Galois Representation</a></li>
     <li><a href="https://publications.ias.edu/rpl">The Work of Robert Langlands</a></li>
+    <li><a href="https://math.ou.edu/~kmartin/afrefs.html">Automorphic Forms Online References</li>
   </ul>
 
   <script>
