--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
   <hr>
   <p>Welcome to my "blog". I am using this website to collect things I find interesting; links to important reference materials, websites and more.. I am currently an undergraduate student at Arizona State University.</p>
 
-  <h2>Links:</h2>
+  <h2>Fall 2023</h2>
+  <p>
+  Advanced Calculus Resources:
+
+  Group Theory Links and Resources:
+  </p>
+  <h3>Links:</h2>
   <ul>
     <li><a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a></li>
     <li><a href="https://www.dropbox.com/s/5sy7cw01tswzu5b/tx070600718p.pdf?dl=0">Galois Representation</a></li>
