--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <h2>Fall 2023</h2>
   <p>
-  Advanced Calculus Resources:
+  Advanced Calculus Resources: 
 
   Group Theory Links and Resources:
   </p>
@@ -34,6 +34,7 @@
     <li><a href="https://www.dropbox.com/s/5sy7cw01tswzu5b/tx070600718p.pdf?dl=0">Galois Representation</a></li>
     <li><a href="https://publications.ias.edu/rpl">The Work of Robert Langlands</a></li>
     <li><a href="https://math.ou.edu/~kmartin/afrefs.html">Automorphic Forms Online References</li>
+    <li><a href="https://www.dropbox.com/s/zdeprojc8dtagw1/gl2emerton.pdf?dl=0">Classical Modular Forms as Automorphic Forms by Matthew Emerton</li>
   </ul>
 
   <script>
