--- a/energy.html
+++ b/energy.html
@@ -3,43 +3,80 @@
 <head>
     <title>Energy Consumption Calculator</title>
     <style>
-        /* Add your CSS styling here */
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            background-color: #e6f2ff; /* Soft blue background */
+            color: #333333; /* Dark text for readability */
+            padding: 20px;
         }
 
-        label {
-            margin-top: 10px;
+        h2 {
+            color: #0056b3; /* Deep blue for heading */
+        }
+
+        .input-group {
+            background-color: #ffffff; /* White background for input groups */
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+            margin-bottom: 15px;
+        }
+
+        .input-group label {
             display: block;
+            margin-bottom: 5px;
+        }
+
+        .input-group img {
+            width: 24px; /* Adjust icon size */
+            vertical-align: middle;
+            margin-right: 8px;
         }
 
         input[type="number"] {
-            margin-bottom: 10px;
+            padding: 8px;
+            border-radius: 4px;
+            border: 1px solid #cccccc;
+        }
+
+        input[type="submit"] {
+            background-color: #0047ab; /* Consistent theme color */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #003366; /* Darker blue on hover */
         }
 
         #result {
             margin-top: 20px;
             font-weight: bold;
+            color: #0047ab;
         }
     </style>
 </head>
 <body>
     <h2>Energy Consumption Calculator</h2>
     <form id="energyForm">
-        <label for="oven">Oven usage (in hours):</label>
-        <input type="number" id="oven" name="oven" min="0"><br>
+        <!-- Input for Oven -->
+        <div class="input-group">
+            <label for="oven"><img src="path/to/oven-icon.jpeg" alt="Oven Icon"> Oven usage (in hours):</label>
+            <input type="number" id="oven" name="oven" min="0">
+        </div>
 
-        <label for="microwave">Microwave usage (in hours):</label>
-        <input type="number" id="microwave" name="microwave" min="0"><br>
+        <!-- Add additional divs for appliances and activities -->
+        <!-- Example: Refrigerator -->
+        <div class="input-group">
+            <label for="refrigerator"><img src="path/to/fridge-icon.jpeg" alt="Refrigerator Icon"> Refrigerator (in hours, usually 24 for constant usage):</label>
+            <input type="number" id="refrigerator" name="refrigerator" min="0">
+        </div>
 
-        <!-- Add fields for other appliances -->
-
-        <label for="tv">TV usage (in hours):</label>
-        <input type="number" id="tv" name="tv" min="0"><br>
-
-        <label for="lighting">Lighting (in hours):</label>
-        <input type="number" id="lighting" name="lighting" min="0"><br>
+        <!-- Include more fields as needed -->
 
         <input type="submit" value="Calculate">
     </form>
@@ -47,26 +84,25 @@
     <div id="result"></div>
 
     <script>
-        // JavaScript for calculation
         document.getElementById('energyForm').onsubmit = function(event){
             event.preventDefault();
 
+            // Retrieve values and convert to float, default to 0 if empty
             var ovenHours = parseFloat(document.getElementById('oven').value) || 0;
-            var microwaveHours = parseFloat(document.getElementById('microwave').value) || 0;
-            var tvHours = parseFloat(document.getElementById('tv').value) || 0;
-            var lightingHours = parseFloat(document.getElementById('lighting').value) || 0;
+            var refrigeratorHours = parseFloat(document.getElementById('refrigerator').value) || 24; // Default to 24 hours for continuous appliances
 
-            // Energy consumption values in kWh per hour
-            var ovenEnergy = ovenHours * 1.5; // average oven uses about 1.5 kWh per hour
-            var microwaveEnergy = microwaveHours * 1.2; // average microwave uses about 1.2 kWh per hour
-            var tvEnergy = tvHours * 0.1; // average TV uses about 0.1 kWh per hour
-            var lightingEnergy = lightingHours * 0.06; // average lighting uses about 0.06 kWh per hour
+            // Add similar lines for other inputs
 
-            var totalEnergy = ovenEnergy + microwaveEnergy + tvEnergy + lightingEnergy;
+            // Energy calculations (in kWh)
+            var ovenEnergy = ovenHours * 1.5; // average oven
+            var refrigeratorEnergy = refrigeratorHours * 0.15; // average refrigerator
 
+            // Calculate total energy
+            var totalEnergy = ovenEnergy + refrigeratorEnergy;
+
+            // Display result
             document.getElementById('result').innerHTML = 'Estimated Daily Energy Consumption: ' + totalEnergy.toFixed(2) + ' kWh';
         };
     </script>
 </body>
 </html>
-
