--- a/energy.html
+++ b/energy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Energy Consumption Calculator</title>
+    <title>Daily Energy Consumption Calculator</title>
     <style>
         body {
             font-family: Arial, sans-serif;
