--- a/energy.html
+++ b/energy.html
@@ -64,7 +64,7 @@
     </style>
 </head>
 <body>
-    <h2>Energy Consumption Calculator</h2>
+    <h2>Daily Energy Consumption Calculator</h2>
     <form id="energyForm">
         <!-- Oven Usage -->
         <div class="input-group">
