--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </p>
   <h3>Links:</h2>
   <ul>
+    <li><a href="https://math.dartmouth.edu/~dana/bookspapers/cstar.pdf">A Very Short Course on C*-Algebras - Dana P. Williams</a></li>
     <li><a href="https://www.ams.org/journals/notices/201901/rnoti-p16.pdf">Iwasawa Theory: A Climb up the Tower by Romyar Sharifi</a></li>
     <li><a href="https://www.people.vcu.edu/~rhammack/BookOfProof/">Book of Proof</a></li>
     <li><a href="https://www.dropbox.com/s/5sy7cw01tswzu5b/tx070600718p.pdf?dl=0">Galois Representation</a></li>
