--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   </p>
   <h3>Links:</h2>
   <ul>
+    <li><a href="https://people.math.harvard.edu/~elkies/M55b.17/index.html">Math55b</a></li>
     <li><a href="https://people.math.harvard.edu/~elkies/M55a.02/index.html">Math55a</a><a/li>
     <li><a href="https://math.dartmouth.edu/~dana/bookspapers/cstar.pdf">A Very Short Course on C*-Algebras - Dana P. Williams</a></li>
     <li><a href="https://www.ams.org/journals/notices/201901/rnoti-p16.pdf">Iwasawa Theory: A Climb up the Tower by Romyar Sharifi</a></li>
