--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <body>
     <nav>
         <ul class="side-buttons">
-            <li><a href="#home">[Home]</a></li>
-            <li><a href="#about">[About Me]</a></li>
-            <li><a href="#links">[Links]</a></li>
-            <li><a href="#projects">[Projects]</a></li>
+            <li><a href="#home">[home]</a></li>
+            <li><a href="#about">[about Me]</a></li>
+            <li><a href="#links">[links]</a></li>
+            <li><a href="#projects">[projects]</a></li>
         </ul>
     </nav>
 
