--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My Webpage</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <nav>
         <ul class="side-buttons">
-            <li><a href="#home">[home]</a></li>
-            <li><a href="#about">[about Me]</a></li>
-            <li><a href="#links">[links]</a></li>
-            <li><a href="#projects">[projects]</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#links">Links</a></li>
+            <li><a href="#projects">Projects</a></li>
         </ul>
     </nav>
-
-    <!-- Main content area -->
     <div class="main-content">
         <h1>Welcome to My Webpage</h1>
         <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
     </div>
-
-    <script src="script.js"></script>
 </body>
-
 </html>
-
 
