--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Webpage</title>
+    <title>Cole Chapman</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul class="side-buttons">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">about Me</a></li>
+            <li><a href="#links">links</a></li>
+            <li><a href="#projects">projects</a></li>
         </ul>
     </nav>
     <div class="main-content">
