--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </nav>
     <div class="main-content">
-        <h1>Welcome to My Webpage</h1>
+        <h1>cole chapman</h1>
         <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
     </div>
 </body>
