--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cole Chapman</title>
+    <title>cole chapman</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul class="side-buttons">
             <li><a href="#home">home</a></li>
-            <li><a href="#about">about Me</a></li>
+            <li><a href="#about">about me</a></li>
             <li><a href="#links">links</a></li>
             <li><a href="#projects">projects</a></li>
         </ul>
     </nav>
     <div class="main-content">
         <h1>cole chapman</h1>
-        <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+        <p>this is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
     </div>
 </body>
 </html>
