--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
             <li><a href="#projects">projects</a></li>
         </ul>
     </nav>
-    <div class="main-content">
-        <h1>cole chapman</h1>
-        <p>this is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+   <div id="outer">
+        <div id="inner">
+            <div id="blog">
+                <header id="blog_header_card">
+                    <h1 id="blog_header">Welcome to My Webpage</h1>
+                </header>
+                <section id="content" class="box">
+                    <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+                    <!-- Additional content here -->
+                </section>
+            </div>
+        </div>
     </div>
 </body>
 </html>
-
