--- a/index.html
+++ b/index.html
@@ -2,30 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>cole chapman</title>
+    <title>My Webpage</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul class="side-buttons">
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about me</a></li>
-            <li><a href="#links">links</a></li>
-            <li><a href="#projects">projects</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#links">Links</a></li>
+            <li><a href="#projects">Projects</a></li>
         </ul>
     </nav>
-   <div id="outer">
-        <div id="inner">
-            <div id="blog">
-                <header id="blog_header_card">
-                    <h1 id="blog_header">Welcome to My Webpage</h1>
-                </header>
-                <section id="content" class="box">
-                    <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
-                    <!-- Additional content here -->
-                </section>
-            </div>
-        </div>
+    <div class="main-content">
+        <h1>Welcome to My Webpage</h1>
+        <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
     </div>
 </body>
 </html>
