--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Webpage</title>
+    <title>cole chapman</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul class="side-buttons">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#projects">Projects</a></li>
-        </ul>
-    </nav>
-    <div class="main-content">
-        <h1>Welcome to My Webpage</h1>
-        <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+    <div class="container"> <!-- New container div -->
+        <nav>
+            <ul class="side-buttons">
+                <li><a href="#home">home</a></li>
+                <li><a href="#about">about me</a></li>
+                <li><a href="#links">links</a></li>
+                <li><a href="#projects">projects</a></li>
+            </ul>
+        </nav>
+        <div class="main-content">
+            <h1>cole chapman</h1>
+            <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+        </div>
     </div>
 </body>
 </html>
