--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a href="#about">about me</a></li>
                 <li><a href="#links">links</a></li>
                 <li><a href="#projects">projects</a></li>
+                <li><a href="#CV">CV</a></li>
             </ul>
         </nav>
         <div class="main-content">
