--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"> <!-- New container div -->
+    <div class="container">
         <nav>
             <ul class="side-buttons">
                 <li><a href="#home">home</a></li>
@@ -20,6 +20,7 @@
         <div class="main-content">
             <h1>cole chapman</h1>
             <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
+            <!-- forecast_placeholder -->
         </div>
     </div>
 </body>
