--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
             <!-- forecast_placeholder -->
         </div>
     </div>
+    <script>
+  // Fetch the static shipping_forecast.txt file and insert its content into the page
+  fetch('data/shipping_forecast.txt')
+    .then(response => response.text())
+    .then(text => {
+      // Find the element where you want to insert the forecast
+      const mainContentDiv = document.querySelector('.main-content');
+      // Create a new element to hold the forecast
+      const forecastDiv = document.createElement('div');
+      forecastDiv.id = 'shipping-forecast';
+      // Insert the forecast text into the new div
+      forecastDiv.innerText = text;
+      // Append the forecast div to the main content div on the page
+      mainContentDiv.appendChild(forecastDiv);
+    })
+    .catch(error => console.error('Error fetching shipping forecast:', error));
+</script>
+
 </body>
 </html>
