--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main-content">
             <h1>cole chapman</h1>
             <p>This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
-            <textarea id="shipping-forecast" rows="30" cols="50"></textarea>
+            <textarea id="shipping-forecast" rows="10" cols="50"></textarea>
         </div>
     </div>
     <script>
@@ -30,7 +30,7 @@
         .then(text => {
           // Find the textarea element where you want to insert the forecast
           const shippingForecastTextarea = document.getElementById('shipping-forecast');
-          // Set the text content of the textarea to the forecast text
+          // Set the text content of the textarea to the fetched forecast text
           shippingForecastTextarea.value = text;
         })
         .catch(error => console.error('Error fetching shipping forecast:', error));
